--- a/templates/purchases/edit_purchase.html
+++ b/templates/purchases/edit_purchase.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block page_content %}
+{% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/purchase.css') }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
@@ -51,10 +51,8 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
     flatpickr("#purchase_date", {
-        dateFormat: "d-m-Y",
+        dateFormat: "Y-m-d",
         allowInput: true
     });
 </script>
 {% endblock %}
-
-
