--- a/templates/purchases/edit_purchase.html
+++ b/templates/purchases/edit_purchase.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/purchase.css') }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
@@ -56,3 +56,4 @@
     });
 </script>
 {% endblock %}
+
