--- a/templates/purchases/new_purchase.html
+++ b/templates/purchases/new_purchase.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/purchase.css') }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
@@ -95,3 +95,4 @@
 </script>
 <script src="{{ url_for('static', filename='js/purchase.js') }}"></script>
 {% endblock %}
+
