--- a/templates/purchases/view_purchase.html
+++ b/templates/purchases/view_purchase.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/purchase.css') }}">
 
 <div class="container py-5 fade-in-up" style="max-width: 900px;">
@@ -77,3 +77,4 @@
     </div>
 </div>
 {% endblock %}
+
